change multiple values to px -> fix display height collapsing

--- a/style.css
+++ b/style.css
@@ -15,15 +15,16 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 3vh;
+    padding: 20px;
     margin-top: 15vh;
-    height: 40vh;
+    height: 400px;
     border: 1px solid white;
     border-radius: 15px;
 }
 
 .display {
     display: flex;
+    overflow-wrap: break-word;
     align-items: center;
     background-color: white;
     color: black;
@@ -37,8 +38,8 @@ body {
 
 .numpad {
     display: grid;
-    margin-top: 3vh;
-    grid-gap: 2vh;
+    margin-top: 30px;
+    grid-gap: 15px;
     grid-template-columns: repeat(4, 1fr);
     padding-bottom: 50px;
 }
